# 3D-Renderer

./: 3D-Renderer.sln  README.md
3D-Renderer/: 3D-Renderer.vcxproj  3D-Renderer.vcxproj.filters  CMakeLists.txt  imgui.ini
3D-Renderer/res/shaders/: basic.shader  planet.shader  skybox.shader
3D-Renderer/src/: .h  Camera.cpp  Camera.h  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  VertexArray.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
3D-Renderer/src/tests/: CubeWorld.cpp  CubeWorld.h  SolarSystem.cpp  SolarSystem.h  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  TestTexture3D.cpp  TestTexture3D.h
